[package]
name = "circles"
version = "0.1.0"
authors = ["Luracasmus"]
edition = "2021"
rust-version = "1.79.0"
description = "Literally pointless 2D game"
repository = "https://github.com/Luracasmus/circles"
keywords = ["2d","game"]
categories = ["games"]
build = "build.rs"

[dependencies]
bevy = { version = "0.14.0-rc.2", default-features = false, features = [
	"bevy_asset",
	"bevy_state",
	"bevy_color",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_pbr",
	"bevy_render",
	"bevy_sprite",
	"multi_threaded",
	"tonemapping_luts"
] }
rand = "0.9.0-alpha.1"

[build-dependencies]
embed-manifest = "1.4.0"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
strip = "symbols"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1
