[package]
name = "circles"
version = "0.1.0"
authors = ["Luracasmus"]
edition = "2021"
rust-version = "1.79.0"
description = "Literally pointless 2D game"
repository = "https://github.com/Luracasmus/circles"
keywords = ["2d","game"]
categories = ["games"]

[dependencies]
bevy = { version = "0.14.0-rc.4", default-features = false, features = [
	"bevy_winit",
	"bevy_pbr",
	"bevy_sprite",
	"multi_threaded",
	"tonemapping_luts"
] }
rand = "0.9.0-alpha.1"

[build-dependencies]
embed-manifest = "1.4.0"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1

[profile.release.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
strip = "symbols"
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
format_push_string = "warn"
get_unwrap = "warn"
mem_forget = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
rc_mutex = "warn"
ref_patterns = "warn"
rest_pat_in_fully_bound_structs = "warn"

cargo_common_metadata = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cognitive_complexity = "allow"
integer_division = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
needless_pass_by_value = "allow"
too_many_lines = "allow"
wildcard_imports = "allow"